# repo_harness_template

./: .gitignore  AGENTS.md  MARKDOWN_DOCUMENT_CATALOG.md  PROJECT_WORKFLOW_MANUAL.md  README.md  work_summary_apr5_6.md
.agents/artifacts/: .gitkeep  ARCHITECTURE_GUIDE.md  CURRENT_STATE.md  DECISION_LOG.md  DEPLOYMENT_PLAN.md  DOMAIN_CONTEXT.md  IMPLEMENTATION_PLAN.md  PREVENTIVE_MEMORY.md  PROJECT_HISTORY.md  REQUIREMENTS.md  REVIEW_REPORT.md  SYSTEM_CONTEXT.md  TASK_LIST.md  UI_DESIGN.md  VALIDATION_TEST_CASES.md  WALKTHROUGH.md
.agents/rules/: template_repo.md  workspace.md
.agents/runtime/: downstream_target_presets.psd1  team.json
.agents/scripts/: approval_common.ps1  check_harness_docs.ps1  install_approval_watcher_task.ps1  invoke_user_gate.ps1  open_user_gate.ps1  register_repo_for_approval_watch.ps1  reset_version_artifacts.ps1  set_user_presence.ps1  sync_template_docs.ps1  (+1 more)
.codex-tmp/: markdown_inventory.tsv
.omx/: README.md  RUNTIME_REFERENCE.md
backup/remote_approval/tools/harness_admin/: README.md  build_exe.ps1  harness-admin.spec  pyproject.toml
backup/remote_approval/tools/harness_admin/harness_admin/: app.py  constants.py  env_store.py  runtime_store.py  scheduler.py  subprocess_utils.py  ui.py  watcher.py
backup/remote_approval/tools/harness_admin/harness_admin.egg-info/: PKG-INFO  SOURCES.txt
backup/remote_approval/tools/harness_admin/tests/: test_channels.py  test_runtime_store.py  test_scheduler.py  test_ui.py  test_watcher.py
docs/: HARNESS_ADMIN_APP_GUIDE.md
templates_starter/: AGENTS.md  PROJECT_WORKFLOW_MANUAL.md
(+154 files in other folders)
